--- a/dacade page/index.html
+++ b/dacade page/index.html
@@ -9,12 +9,12 @@
 <body>
   <header class="green">
     <h1>ITOYA EMMANUEL EROMOSELE</h1> 
-    <em><p class="scrat"> || WEB DEVELOPER. || DRONE_ENTHUSIAST.  ||	ENTERPRENEUR. || CIVIL ENGINEER. ||	</p></em>
+    <b><p class="scrat"> || WEB DEVELOPER. || DRONE_ENTHUSIAST.  ||	ENTERPRENEUR. || CIVIL ENGINEER. ||	</p></b>
   </header>
   
   <div class="reference"><div class="popout-menu"> Contact <br /> About <br /> call<br /> </div></div>
   
- <!--<nav class="table">
+ <!-- <nav class="table">
     <p>
 	    <td> <a href="#">contact</a> </td> 
 		<td> <a href="#">call</a> </td> 
@@ -23,11 +23,17 @@
 	</p>
   </nav > -->
   <div class="float">
-    <b>
-	I am Itoya Emmanuel.</b> <br />
-	<p>I waltz around the internet all day,collecting awesome Drone images</p>
-	</div>
-	<img src="C:\Users\emmiefroshe\Downloads\Documents\HTML AND CSS\FIRST WEBSITE\FB_IMG_15482885539499319.jpg" alt="dronepic" width="500px" height="800px" />
+  <p>
+  <b>
+    I am Itoya Emmanuel. 
+	<br />
+	Most of the time,I waltz around the internet all day,collecting awesome Drone images and reading about Drone Technology which i am very enthusiastic aboout
+	Believe the hype you are hearing about drones. Drones are going to change the construction industry—it’s already happening.!!
+	</b>
+	</p>
+	</div> <br />
+	
+	<img src=2.jpg" alt="dronepic" width="500px" height="800px" />
 	
 		
   
